force-app/main/default/objects/Client__c/fields/Client_Address__c.field-meta.xml
<CustomField>
    <fullName>Client_Address__c</fullName>
    <label>Client Address</label>
    <type>TextArea</type>
</CustomField>